--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -69,7 +69,7 @@ h6 {
 --------------------------------------------------------------*/
 #header {
   position: fixed;
-  top: 0;
+  top: 20px;
   left: 0;
   bottom: 0;
   width: 300px;
@@ -105,6 +105,11 @@ h6 {
 }
 
 #header .profile .social-links a {
+  display: flex;
+  flex-direction: column;  /* Stack elements vertically */
+  align-items: center;     /* Center elements horizontally */
+  justify-content: center; /* Center elements vertically */
+  
   font-size: 18px;
   display: inline-block;
   background: #212431;
@@ -157,12 +162,14 @@ h6 {
 /* Desktop Navigation */
 .nav-menu {
   padding: 30px 0 0 0;
+  
 }
 
 .nav-menu * {
   margin: 0;
   padding: 0;
   list-style: none;
+  
 }
 
 .nav-menu>ul>li {
