--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -69,7 +69,7 @@ h6 {
 --------------------------------------------------------------*/
 #header {
   position: fixed;
-  top: 20px;
+  top: 0;
   left: 0;
   bottom: 0;
   width: 300px;
